--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "commitmsg": "validate-commit-msg"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,12 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
     "shortid": "^2.2.15",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "validate-commit-msg": "^2.14.0"
   },
   "devDependencies": {
-    "cz-conventional-changelog": "^3.2.0"
+    "cz-conventional-changelog": "^3.2.0",
+    "husky": "^4.2.5"
   },
   "config": {
     "commitizen": {
