--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git-cz",
-    "commitmsg": "validate-commit-msg"
+    "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "validate-commit-msg": "^2.14.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.1",
     "cz-conventional-changelog": "^3.2.0",
     "husky": "^4.2.5"
   },
