--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "louis",
-  "version": "2.0.5",
+  "version": "2.0.6-alpha.0",
   "description": "A Test App",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "commit": "git cz",
     "release": "standard-version",
-    "pre-release": "standard-version -- --prerelease alpha",
+    "pre-release": "standard-version --prerelease alpha",
     "version": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md"
   },
   "husky": {
