--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "danger": "^10.3.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
     "shortid": "^2.2.15",
